Sutter Health/src/objects/KMFeedback__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Feedback Item Owner Assignment Matrix</description>
    <fields>
        <fullName>Backup_Username__c</fullName>
        <label>Backup Username</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Backup__c</fullName>
        <label>Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KM_Champion_Username__c</fullName>
        <label>KM Champion Username</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KM_Champion__c</fullName>
        <label>KM Champion</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <label>Sub-Function</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>KMFeedback</label>
</CustomObject>